--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "eslint": "^6.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.6"
+    "mongoose": "^5.6.6",
+    "validator": "^11.1.0"
   }
 }
