--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^6.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.6",
+    "mongoose-unique-validator": "^2.0.3",
     "validator": "^11.1.0"
   }
 }
